fixed screen horizontal scroll by changing justify content for navbar to center from space between for 700 screen size

--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,10 @@ button:hover {
   .nav-links ul li a {
     font-size: 15px;
   }
+
+  .navbar {
+   justify-content:center ;
+  }
 }
 
 .navbar .unik h4 {
